2012-04-20  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/menu.php: Changed default path to 'Module Manage'.

2012-04-20  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/alerts/alert_list.builder.php: Fixed bug: In tab alert
	within agent detail, the actions depends on the template.

2012-04-19  Sancho Lerena <slerena@artica.es>

	* operation/agentes/estado_monitores.php: Put units in module view. 
	Fixed a Postgrest missing ")" in SQL.

	* operation/agentes/status_monitor.php: Put units in module view.

	* operation/agentes/alerts_status.php: better layout on alert 
	tabular view, now using dynamic width.

2012-04-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/gis_maps/render_view.php: Resize GIS map on normal view.
	
	Bugfix: #3469971.

2012-04-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/gis_maps/render_view.php: Resize GIS map on fullscreen.
	
	Bugfix: #3469971.

2012-04-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_config.php: Added check for update manager in 
	the config process.
	
	Merged from trunk. 

2012-04-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* images/skin/skin_default/include/styles/pandora.css: Modified 
	styles in skin like in the main css style file.

2012-04-18 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_config.php, extensions/update_manager.php,
	extensions/update_manager/lib/functions.php: fixed the first
	intallation of update manager.
	
	* include/functions_ui.php, include/functions_agents.php: cleaned
	source code style.

2012-04-18  Sancho Lerena <slerena@artica.es>

	* operation/servers/recon_view.php: Fix column header.

	* godmode/agentes/module_manager_editor_plugin.php: Now plugin description
	is shown formatted (\n -> <br>). Some fields have better layout.

	* godmode/servers/plugin.php: Ajax load of description is now formatted.

	* godmode/servers/manage_recontask.php: Fix link to show recon server.
